Changelog for mk-table-checksum and mk-checksum-filter:

   * Added --singlechunk and --savesince (issue 53).
   * --replicate with large WHERE did not fit in boundaries column (issue 81).

2008-09-19: version 1.1.29

   * Added --argtable, --offset and --modulo for issue 53.
   * Added --nouseindex option (issue 8).
   * Fixed processing of column options (issue 4, patch by Travis Whitton)
   * Changed --emptyrepltbl to always completely empty the table (issue 21).
   * Added --schema option for issue 5.
   * Added --since and --sincecolumn options for issue 53.
   * Added --probability option for issue 53.
   * A missing table caused a crash (issue 35).
   * Functions specified with --function were not optimized (issue 43).
   * Made debugging code more efficient in non-debug mode.

2008-08-11: version 1.1.28

   * Files downloaded directly from SVN crashed due to version information.

2008-06-02: version 1.1.27

   * Update documentation, generate command-line options from POD.
   * Added --trim to compare pre-5.0 and 5.0+ VARCHAR values consistently.

2008-03-16: version 1.1.26

   * Added --setvars option (bug #1904689, bug #1911371).
   * Added 'A' part to DSNs (bug #1877548).
   * Added --unique option to mk-checksum-filter.
   * The exit status from mk-checksum-filter was always 0.
   * mk-table-checksum now prefers to discover slaves via SHOW PROCESSLIST.

2008-02-10: version 1.1.25

   * The --lock option did not work correctly (bug #1884712).

2008-01-05: version 1.1.24

   * Added support for the FNV_64 UDF, which is distributed with Maatkit.
   * --emptyrepltbl didn't Do The Right Thing by default.
   * --explain didn't disable --emptyrepltbl
   * Made suffixes for time options optional (bug #1858696).
   * The --float-precision option was ignored.
   * (mk-checksum-filter) -i, -d options worked only on multiple files.

2007-12-27: version 1.1.23

   * Updated documentation about version compatibility.
   * Updated documentation for --replcheck.
